// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot of allLanguages: allLanguages 1`] = `
Array [
  Object {
    "code": "en",
    "label": "English",
    "shortLabel": "EN",
  },
  Object {
    "code": "ar",
    "label": "العربية",
    "shortLabel": "ع",
  },
]
`;

exports[`should match snapshot when providing all fields: errors 1`] = `Array []`;

exports[`should match snapshot when providing all fields: output 1`] = `
LanguageEntity {
  "code": "en",
  "label": "English",
  "shortLabel": "EN",
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `Array []`;

exports[`should match snapshot when providing required fields only: output 1`] = `
LanguageEntity {
  "code": "en",
  "label": "English",
  "shortLabel": "EN",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isIn": "code must be one of the following values: en, ar",
    },
    "property": "code",
    "target": LanguageEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isIn": "shortLabel must be one of the following values: EN, ع",
    },
    "property": "shortLabel",
    "target": LanguageEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isIn": "label must be one of the following values: English, العربية",
    },
    "property": "label",
    "target": LanguageEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `LanguageEntity {}`;
